# Marlu

./: Cargo.toml  Dockerfile  LICENSE  README.md  RELEASES.md  build.rs
.github/workflows/: bench.yml  coverage.yml  release.yml  run-tests.yaml  run-tests.yml
benches/: bench.rs  bench_io.rs  bench_misc.rs
examples/: write_ms.rs
src/: averaging.rs  constants.rs  context.rs  cuda.rs  jones.rs  lib.rs  math.rs  precession.rs  selection.rs  sexagesimal.rs  time.rs
src/io/: error.rs  mod.rs  ms.rs  uvfits.rs
src/pos/: azel.rs  earth.rs  enh.rs  hadec.rs  lmn.rs  mod.rs  pal.rs  precession.rs  radec.rs  uvw.rs  xyz.rs
tests/data/: README.md  casa_dump_ms.py  clear_ant_flags.py
tests/data/1196175296_mwa_ord/: 1196175296.uvfits.csv  1196175296_20171201145540_gpubox02_01.fits.txt
tests/data/1254670392_avg/: 1254670392.cotter.none.trunc.ms.csv  1254670392.metafits
tests/data/1254670392_avg/1254670392.cotter.none.avg_4s_80khz.trunc.ms/: table.f0  table.f0i
tests/data/1254670392_avg/1254670392.cotter.none.avg_4s_80khz.trunc.ms/ANTENNA/: table.f0
tests/data/1254670392_avg/1254670392.cotter.none.avg_4s_80khz.trunc.ms/FIELD/: table.f0
tests/data/1254670392_avg/1254670392.cotter.none.avg_4s_80khz.trunc.ms/HISTORY/: table.f0
tests/data/1254670392_avg/1254670392.cotter.none.avg_4s_80khz.trunc.ms/OBSERVATION/: table.f0
tests/data/1254670392_avg/1254670392.cotter.none.avg_4s_80khz.trunc.ms/SOURCE/: table.f0
tests/data/1254670392_avg/1254670392.cotter.none.avg_4s_80khz.trunc.ms/SPECTRAL_WINDOW/: table.f0  table.f0i
tests/data/1254670392_avg/1254670392.cotter.none.trunc.ms/: table.f0  table.f0i
tests/data/1254670392_avg/1254670392.cotter.none.trunc.ms/ANTENNA/: table.f0i
tests/data/1254670392_avg/1254670392.cotter.none.trunc.ms/FEED/: table.f0  table.f0i
tests/data/1254670392_avg/1254670392.cotter.none.trunc.ms/HISTORY/: table.f0
tests/data/1254670392_avg/1254670392.cotter.none.trunc.ms/MWA_TILE_POINTING/: table.f0i
tests/data/1254670392_avg/1254670392.cotter.none.trunc.ms/SPECTRAL_WINDOW/: table.f0i
